syntax = "proto3";

option go_package = "shop/pkg/proto";

package shop;

service OrderHistoryService {
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {}
}

message GetOrdersRequest {
  string user_id = 1;
  int64 page = 2;
  int64 limit = 3;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}

message Order {
  string id = 1;
  repeated OrderItem order_items = 2;
  string payment_id = 3;
  string payment_method_id = 4;
  string payment_type = 5;
  string payment_gateway = 6;
  int64 payment_sum = 7;
  string payment_external_id = 8;
  string payment_status = 9;
  string status = 10;
  string created_at = 11;
  string updated_at = 12;
}

message OrderItem {
  string product_id = 1;
  string name = 2;
  int64 price = 3;
  int64 quantity = 4;
}